// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`one SE_ACCIDENT quote 1`] = `
Object {
  "name": "received_quotes",
  "variables": Object {
    "initiated_from": "SELF_CHANGE",
    "quote_ids": Array [
      "123",
    ],
    "type_of_contracts": Array [
      "SE_ACCIDENT",
    ],
  },
}
`;

exports[`two different quotes 1`] = `
Object {
  "name": "received_quotes",
  "variables": Object {
    "initiated_from": "APP",
    "quote_ids": Array [
      "123",
      "12345",
    ],
    "type_of_contracts": Array [
      "SE_ACCIDENT",
      "SE_APARTMENT_BRF",
    ],
  },
}
`;
